--- a/index.html
+++ b/index.html
@@ -249,20 +249,20 @@
 	<div class="dustbin-card" data-fill="85">
 	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
 	<div class="dustbin-info">
-    <h3>Dustbin 1</h3>
-    <p>Location: Main Gate</p>
-</div>
-<div class="dustbin-status">
-    <span class="status-label high-status">High</span>
-    <p>Distance: <span id="distance-value">Loading...</span> cm</p> <!-- Add an ID here -->
-    <div class="fill-level-bar">
-        <div style="width: 85%;"></div>
-    </div>
-    <p>Waste Age: 2 days</p>
-    <input type="checkbox" id="selectDustbin1" data-lat="17.780001" data-lon="83.379001">
-    <label for="selectDustbin1">Select Dustbin</label>
-</div>
-
+	<h3>Dustbin 1</h3>
+	<p>Location: Main Gate</p>
+	</div>
+	<div class="dustbin-status">
+	<span class="status-label high-status">High</span>
+	<p>Fill Level: 85%</p>
+	<div class="fill-level-bar">
+	<div style="width: 85%;"></div>
+	</div>
+	<p>Waste Age: 2 days</p>
+	<input type="checkbox" id="selectDustbin1" data-lat="17.780001" data-lon="83.379001">
+	<label for="selectDustbin1">Select Dustbin</label>
+	</div>
+	</div>
 	
 	<div class="dustbin-card" data-fill="65">
 	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
@@ -476,3 +476,4 @@
 	</script>
 	</body>
 	</html>
+	
