--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	</div>
 	<div class="dustbin-status">
 	<span class="status-label high-status">High</span>
-	<p>Fill Level: 85%</p>
+	<p>distance-value</p>
 	<div class="fill-level-bar">
 	<div style="width: 85%;"></div>
 	</div>
