--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 	}
 	document.querySelector('.container').appendChild(dustbinCard); // Append to existing container
 	});
-	</script>
+	<script src="script.js"></script>
 	</body>
 	</html>
 	
