--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	</div>
 	<div class="dustbin-status">
 	<span class="status-label high-status">High</span>
-	<p>Fill Level: 85%</p>
+	<p>Distance: <span id="distance-value">Loading...</span> cm</p>
 	<div class="fill-level-bar">
 	<div style="width: 85%;"></div>
 	</div>
@@ -473,7 +473,7 @@
 	}
 	document.querySelector('.container').appendChild(dustbinCard); // Append to existing container
 	});
-	</script>
+       <script src="myscripts.js"></script> 
 	</body>
 	</html>
 	
