--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 	}
 	document.querySelector('.container').appendChild(dustbinCard); // Append to existing container
 	});
-       <script src="myscripts.js"></script> 
+       <script src="scripts.js"></script> 
 	</body>
 	</html>
 	
