--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 	<html lang="en">
 	<head>
 	<meta charset="UTF-8">
@@ -247,14 +247,14 @@
 	<!-- Dustbin Cards -->
 	<h2 id="dustbinInfo">Dustbin Status</h2>
 	<div class="dustbin-card" data-fill="85">
-	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
+	<img src="https://d1utvfg27pmj9q.cloudfront.net/uploads/products/photos/2TKDFo0fOY2u6JPzjceC9lc12CsSrpPY0HH0DV0d.webp" alt="Dustbin Image">
 	<div class="dustbin-info">
 	<h3>Dustbin 1</h3>
 	<p>Location: Main Gate</p>
 	</div>
 	<div class="dustbin-status">
 	<span class="status-label high-status">High</span>
-	<p>Distance: <span id="distance-value"> </span> cm</p>
+	<p id="distance">Distance: Loading...</p>  
 	<div class="fill-level-bar">
 	<div style="width: 85%;"></div>
 	</div>
@@ -265,7 +265,7 @@
 	</div>
 	
 	<div class="dustbin-card" data-fill="65">
-	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
+	<img src="https://d1utvfg27pmj9q.cloudfront.net/uploads/products/photos/2TKDFo0fOY2u6JPzjceC9lc12CsSrpPY0HH0DV0d.webp" alt="Dustbin Image">
 	<div class="dustbin-info">
 	<h3>Dustbin 2</h3>
 	<p>Location: Cafeteria</p>
@@ -283,7 +283,7 @@
 	</div>
 	
 	<div class="dustbin-card" data-fill="40">
-	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
+	<img src="https://d1utvfg27pmj9q.cloudfront.net/uploads/products/photos/2TKDFo0fOY2u6JPzjceC9lc12CsSrpPY0HH0DV0d.webp" alt="Dustbin Image">
 	<div class="dustbin-info">
 	<h3>Dustbin 3</h3>
 	<p>Location: Parking Area</p>
@@ -301,7 +301,7 @@
 	</div>
 	
 	<div class="dustbin-card" data-fill="90">
-	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
+	<img src="https://d1utvfg27pmj9q.cloudfront.net/uploads/products/photos/2TKDFo0fOY2u6JPzjceC9lc12CsSrpPY0HH0DV0d.webp" alt="Dustbin Image">
 	<div class="dustbin-info">
 	<h3>Dustbin 4</h3>
 	<p>Location: Library</p>
@@ -319,7 +319,7 @@
 	</div>
 	
 	<div class="dustbin-card" data-fill="60">
-	<img src="https://www.bing.com/images/blob?bcid=r1y-ScL7e94HSw" alt="Dustbin Image">
+	<img src="https://d1utvfg27pmj9q.cloudfront.net/uploads/products/photos/2TKDFo0fOY2u6JPzjceC9lc12CsSrpPY0HH0DV0d.webp" alt="Dustbin Image">
 	<div class="dustbin-info">
 	<h3>Dustbin 5</h3>
 	<p>Location: Auditorium</p>
@@ -356,8 +356,8 @@
 	<!-- Help and Support Section -->
 	<div id="helpSupport" class="help-support">
 	<h3>Help and Support</h3>
-	<p>Email: support@smartbins.in</p>
-	<p>Contact: 8919884369</p>
+	<p>Email:yelletimohan098@gmail.com</p>
+	<p>Contact: 6309315583</p>
 	<p>Location: GITAM, Rushikonda, 530017</p>
 	
 	<div class="contact-btns">
@@ -473,7 +473,8 @@
 	}
 	document.querySelector('.container').appendChild(dustbinCard); // Append to existing container
 	});
-       <script src="scripts.js"></script> 
+	<script src="script.js"></script>
 	</body>
 	</html>
+	
 	
